[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[project]
name = "crpto-api-updater"
version = "0.1.0"
description = ""
authors = [
    {name = "smangj",email = "631535207@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "fastapi (>=0.104.0)",
    "sqlalchemy (>=2.0.0)",
    "pydantic (>=2.0.0)",
    "requests",
    "uvicorn (>=0.24.0)",
    "psycopg2-binary",
    "sqlalchemy"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
jupyterlab = "^4.4.10"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"